--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h5>Nosotros</h5>
     <h5>Menú</h5>
-    <img src="file:///C:/Users/Andrea%20Villavicencio/Downloads/participacion%204.pdf" alt="">
+    <img src="../HTML_practicas/Pasteleria/Diseño sin título (9).png" alt="apalabrados" width="500px" height="300px">
     <h1>Apalabrados</h1>
     <h2>Dilo con un pastel</h2>
     <h3>Reposteria creativa, personaliza tu pastel y sorprende a esa persona especial, en vez de llegar con el tipico y aburrido pastel</h3>
