--- a/menu.html
+++ b/menu.html
@@ -11,19 +11,18 @@
     <h1>Selecciona los sabores para tu pastel</h1>
     <h2>Te recomendamos no elegir más de 3</h2>
     <p>Selecciona</p>
-    <img src="https://www.pngegg.com/es/png-wbncd" alt="">
     <input type="checkbox" id="Chocolate" name="sabores" value="Chocolate">
     <label for="Chocolate">Chocolate</label><br>
-    <img src="https://www.pngegg.com/es/png-wbncd" alt="">
+    <img src="https://e7.pngegg.com/pngimages/312/917/png-clipart-chocolate-cake-chocolate-cake.png" alt="">
     <input type="checkbox" id="Vainilla" name="sabores" value="Vainilla">
     <label for="Vainilla">Vainilla</label><br>
-    <img src="https://www.pngegg.com/es/png-fxejr" alt="">
+    <img src="https://e1.pngegg.com/pngimages/552/54/png-clipart-slice-of-vanilla-cake.png" alt="">
     <input type="checkbox" id="Marmoleado" name="sabores" value="Marmoleado">
     <label for="Marmoleado">Marmoleado</label><br><br>
-    <img src="https://www.freepng.es/png-0pld87/" alt="">
+    <img src="https://media.istockphoto.com/photos/marble-cake-on-square-plate-textured-surface-isolated-background-picture-id172362903?k=20&m=172362903&s=612x612&w=0&h=t04v6CAdSfYCNyDgVDyHCIn4oqsEhi8oxAvN4flMflg=" alt="">
     <input type="checkbox" id="Naranja" name="sabores" value="Naranja">
     <label for="Naranja">Naranja</label><br><br>
-    <img src="https://img2.freepng.es/20180426/cfq/kisspng-pumpkin-bread-fudge-cake-pound-cake-parkin-delicious-moon-cake-5ae1c7c7134733.940017111524746183079.jpg/" alt="">
+    <img src="https://img2.freepng.es/20180426/cfq/kisspng-pumpkin-bread-fudge-cake-pound-cake-parkin-delicious-moon-cake-5ae1c7c7134733.940017111524746183079.jpg" alt="">
     <input type="checkbox" id="Zanahoria" name="sabores" value="Zanahoria">
     <label for="Zanahoria">Zanahoria</label><br><br>
     <img src="https://w7.pngwing.com/pngs/713/314/png-transparent-carrot-cake-cream-cheese-torte-cake-cream-food-cheese.png" alt="">
@@ -41,7 +40,7 @@
         <label for="Canción de Spotify">URL de la canción:</label>
         <input type="text" id="Canción de Spotify" name="Canción de Spotify" placeholder="Canción de Spotify">
       </form>
-    <img src="https://imaginecut.com/hello-world-9/" alt="">
+    <img src="https://i.pinimg.com/originals/7c/93/92/7c93920948f5b484370945a7553cb640.jpg" alt="">
     <p>Selecciona</p>
     <input type="checkbox" id="K chingue a su madre el cumpleañero" name="mensaje" value="K chingue a su madre el cumpleañero">
     <label for="K chingue a su madre el cumpleañero">K chingue a su madre el cumpleañero</label><br>
@@ -50,7 +49,7 @@
         <label for="K chingue a su madre el cumpleañero">Nombre del cumpleañero:</label>
         <input type="text" id="K chingue a su madre el cumpleañero" name="K chingue a su madre el cumpleañero" placeholder="K chingue a su madre el cumpleañero">
       </form>
-    <img src="https://www.pinterest.com.mx/rubi_247/chingue-su-madre/" alt="">
+    <img src="https://pbs.twimg.com/media/E4oJWjYWYAII-hG.jpg" alt="">
     <p>Selecciona</p>
     <input type="checkbox" id="¡Feliz cumpleaños!" name="mensaje" value="¡Feliz cumpleaños!">
     <label for="¡Feliz cumpleaños!">¡Feliz cumpleaños!</label><br>
@@ -59,7 +58,7 @@
         <label for="¡Feliz cumpleaños!">Nombre del cumpleañero:</label>
         <input type="text" id="¡Feliz cumpleaños!" name="¡Feliz cumpleaños!" placeholder="¡Feliz cumpleaños!">
       </form>
-    <img src="https://www.pinterest.com.mx/pin/333829391135400659/" alt="">
+    <img src="https://s3.us-east-2.amazonaws.com/portal-laneta/HenysbelOmana/content-image-01-202102101215551555" alt="">
     </p>
 </body>
 </html>
